# src/swagger/swagger_output.json
@@ -186,6 +186,16 @@
             "name": "autenticador",
             "in": "header",
             "type": "string"
+          },
+          {
+            "name": "Produto",
+            "description": "Objeto para registro de produto.",
+            "required": true,
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {}
+            }
           }
         ],
         "responses": {
@@ -227,7 +237,7 @@
         }
       },
       "patch": {
-        "description": "Rota para atualização de registro em produtos por Id.",
+        "description": "Rota para atualização de um Produto.",
         "parameters": [
           {
             "name": "id",
@@ -239,6 +249,16 @@
             "name": "autenticador",
             "in": "header",
             "type": "string"
+          },
+          {
+            "name": "Produto",
+            "description": "Objeto para atualização de um Produto.",
+            "required": true,
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {}
+            }
           }
         ],
         "responses": {
